[package]
name = "pixel_sorting_rust"
version = "0.1.0"
authors = ["Hendrik Müller <hendrik.mueller@devboost.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.5"
num-complex = "0.3.0"
itertools = "0.9.0"
